feat: port to 1.20.6
BREAKING CHANGE: