@@ -35,10 +35,10 @@ public abstract class ItemMixin {
 
             if (optRecipe.isPresent()) {
                 var recipe = optRecipe.get();
-                recipe.craft(recipeContext, new CraftingContext(level, context.getClickedPos(), context.getClickedFace(), level.getRandom()));
+                recipe.recipe().craft(recipeContext, new CraftingContext(level, context.getClickedPos(), context.getClickedFace(), level.getRandom()));
 
                 // TODO: random chance
-                player.getInventory().getSelected().shrink(recipe.getIngredients().get(0).getAmount());
+                player.getInventory().getSelected().shrink(recipe.recipe().getIngredients().getFirst().getAmount());
 
                 cir.setReturnValue(InteractionResult.SUCCESS);
                 cir.cancel();
